<resources>
    <string name="app_name" translatable="false">Movie Database Explorer</string>
    <string name="language_label">Langue</string>
    <string name="original_title">Titre original</string>
    <string name="vote_average">Moyenne des votes</string>
    <string name="release_date">Date de sortie</string>
    <string name="hint_search">Search</string>
    <string name="label_cast" translatable="false">Casting</string>
    <string name="label_similar">Similar movies</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="label_other_movies">Other movies</string>

    <string name="label_ne">"Born : "</string>

    <string name="status_label">Status</string>
    <string name="original_language_label">Langue originale</string>
    <string name="budget_label" translatable="false">Budget</string>
    <string name="revenue_label">Bénéfices</string>
    <string name="production_companies_label">Société de production</string>
    <string name="popular_title">Films populaires</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="favorite_title">Favorite</string>
    <string name="label_toprated">Mieux notés</string>
    <string name="label_popular">Les plus populaires</string>
    <string name="label_upcoming">Prochainement à l\'affiche</string>
    <string name="label_nowplaying">Dernières nouveautés</string>
    <string name="films">Films</string>
    <string name="advanced_search_title">Recherche avancée</string>
    <string name="add_actor">Ajouter un acteur</string>
    <string name="label_year_as">Année(s)</string>
    <string name="label_actors_as">Actor(s)</string>
    <string name="year_de">De :</string>
    <string name="year_a">A :</string>

    <string name="spinner">Signe</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_sf">Science Fiction</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_tv">TV movie</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="label_notation_as">Vote</string>
    <string name="label_genres_as">Genre(s):</string>
    <string name="hint_search_actor">Actor name</string>
    <string name="menu_film">Film</string>
    <string name="search_by_name">Rechercher par titre</string>
    <string name="menu_search_by_name">Rechercher par titre</string>
    <string name="menu_search_advanced">Recherche avancée</string>
    <string name="search_title">Chercher</string>
    <string name="gallery_icon_cd">gallery icon</string>
    <string name="video_imdb_icon_cd">to video of imdb icon</string>
    <string name="link_to_imdb_icon_cd">link to imdb site icon</string>
    <string name="blurry_person_picture_background_cd">blurry person picture background</string>
    <string name="person_picture_cd">person picture</string>
    <string name="title_of_the_movie_cd">title of the movie</string>
    <string name="rating_star_icon_cd">rating star icon</string>
    <string name="movie_header_image_cd">movie header image</string>
    <string name="movie_poster_cd">movie poster</string>
    <string name="executive_producer">Producer:</string>
    <string name="director">Director:</string>
    <string name="writer">Scénariste :</string>
</resources>
