<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/accueil"
            android:title="@string/menu_film"
            android:icon="@drawable/movies_black" />

        <item
            android:id="@+id/search"
            android:title="@string/menu_search_by_name"
            android:icon="@drawable/search_black"/>

        <item
            android:id="@+id/advanced"
            android:title="@string/menu_search_advanced"
            android:icon="@drawable/search_advanced"/>

        <item
            android:id="@+id/favorite"
            android:title="@string/favorite_title"
            android:icon="@drawable/star"/>

    </group>
</menu>