<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/MyAppbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_image_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            android:elevation="3dp">

            <ImageView
                android:id="@+id/bgheader_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/blurry_person_picture_background_cd"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:elevation="2dp"
                android:clipToPadding="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/picture_person"
                        android:layout_width="130dp"
                        android:layout_height="192dp"
                        android:layout_alignParentStart="true"
                        android:padding="@dimen/spacing_small"
                        android:elevation="1dp"
                        android:clipToPadding="false"
                        android:contentDescription="@string/person_picture_cd"
                        tools:src="@tools:sample/avatars"/>

                    <TextView
                        android:id="@+id/birthdate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ne"
                        android:textSize="@dimen/content_text_size"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingEnd="@dimen/spacing_small"
                        android:layout_toEndOf="@+id/picture_person"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/birthdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_toEndOf="@+id/birthdate_label"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingEnd="@dimen/spacing_small"
                        android:textSize="@dimen/content_text_size"
                        tools:text="@tools:sample/date/ddmmyy" />

                    <TextView
                        android:id="@+id/birthplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/content_text_size"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingEnd="@dimen/spacing_small"
                        android:layout_below="@+id/birthdate_label"
                        android:layout_alignStart="@id/birthdate_label"
                        tools:text="@tools:sample/cities" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:elevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_small">

                    <ImageView
                        android:id="@+id/gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gallery"
                        android:layout_weight="1"
                        android:contentDescription="@string/gallery_icon_cd"/>

                    <ImageView
                        android:id="@+id/video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/video"
                        android:layout_weight="1"
                        android:contentDescription="@string/video_imdb_icon_cd"/>

                    <ImageView
                        android:id="@+id/http"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/http"
                        android:layout_weight="1"
                        android:contentDescription="@string/link_to_imdb_icon_cd"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small">

                <TextView
                    android:fontFamily="sans-serif"
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/content_text_size"
                    android:layout_margin="@dimen/spacing_small"
                    android:lineSpacingMultiplier="1.2"
                    tools:text="Mauris at malesuada erat. Vivamus iaculis ornare turpis eget accumsan. Integer sed lorem elit. Aliquam ut iaculis nulla. Fusce vel tellus augue. Sed eget efficitur orci."/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginBottom="180dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_other_movies"
                        android:textSize="@dimen/subtitle_text_size"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/spacing_huge"
                        android:gravity="center_vertical"
                        android:text="@string/label_other_movies"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:padding="@dimen/spacing_small"
                        android:id="@+id/recycler_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label_other_movies">
                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>